--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -25,6 +25,8 @@
     "@chainlink/contracts": "^1.5.0",
     "@inquirer/password": "^4.0.2",
     "@openzeppelin/contracts": "~5.0.2",
+    "@pythnetwork/pyth-sdk-solidity": "^4.3.1",
+    "@redstone-finance/evm-connector": "^0.9.0",
     "@typechain/ethers-v6": "~0.5.1",
     "dotenv": "~16.4.5",
     "envfile": "~7.1.0",
