fix: Replace GitHub @zksync/contracts dependency with npm registry version for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
       "packages/*"
     ]
   },
+  "resolutions": {
+    "@zksync/contracts": "https://registry.npmjs.org/@matterlabs/zksync-contracts/-/zksync-contracts-0.6.1.tgz"
+  },
   "scripts": {
     "account": "yarn hardhat:account",
     "account:generate": "yarn workspace @se-2/hardhat account:generate",
